# fvt34u-auth

./: .env.example  .gitignore  main.py  pyproject.toml
core/: config.py  database.py  dependencies.py  kafka.py  redis.py
models/: __init__.py  login.py  register.py  user.py
routers/: auth_router.py
services/: auth_service.py
