[project]
name = "fvt34u-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.14.0",
    "asyncpg>=0.31.0",
    "fastapi[all]>=0.136.3",
    "hvac>=2.4.0",
    "python-jose[cryptography]>=3.5.0",
    "redis[asyncio]>=8.0.0",
    "sqlalchemy[asyncio]>=2.0.50",
]

[tool.fastapi]
entrypoint = "main:app"
